# hgetquotes

./: .gitignore  LICENSE  README.md  hgetquotes.cabal
app/: Main.hs
src/: Lib.hs  YahooAPI.hs
