name:                hgetquotes
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hgetquotes#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, YahooAPI
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       time,
                       cassava,
                       text,
                       wreq,
                       lens,
                       vector,
                       safe,
                       http-client
  default-language:    Haskell2010

executable hledger-getquotes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hgetquotes
                     , text
                     , optparse-applicative
                     , hledger-lib
                     , directory
                     , filepath
  default-language:    Haskell2010

test-suite hgetquotes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hgetquotes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hgetquotes
